# pastel

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  ROADMAP.md
.githooks/: pre-commit
crates/pastel-loadtest/: Cargo.toml
crates/pastel-loadtest/src/: bot.rs  main.rs
crates/pastel-proto/: Cargo.toml
crates/pastel-proto/src/: codec.rs  lib.rs  limits.rs  msg.rs  types.rs
crates/pastel-proto/tests/: fixtures.rs  round_trip.rs
crates/pastel-room/: Cargo.toml
crates/pastel-room/src/: bucket.rs  game.rs  lib.rs  room.rs  words.rs
crates/pastel-room/tests/: game.rs  room.rs
crates/pastel-server/: .env.example  Cargo.toml
crates/pastel-server/data/: README.md  words-bot-easy.txt  words-bot-hard.txt  words-bot-medium.txt  words-bot.txt  words-easy.txt  words-hard.txt  words-medium.txt
crates/pastel-server/src/: bot.rs  lib.rs  main.rs  rooms.rs  tracker.rs  voice.rs  words.rs  ws.rs
crates/pastel-server/tests/: server.rs
frontend/: index.html  package-lock.json  package.json  stats.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: blog-thumb.mjs
frontend/src/: avatar.ts  avatarPicker.ts  canvas.ts  celebrate.ts  chat.ts  dialog.ts  emotes.ts  gallery.ts  game.ts  gameUI.ts  kicked.ts  landing.ts  main.ts  mobileTools.ts  music.ts  palette.ts  proto.ts  reveal.ts  roundIntro.ts  share.ts  stats.ts  style.css  toast.ts  toolbar.ts  voice.ts  ws.ts
frontend/tests/: postcard.test.ts
scripts/: build_drawings.py
