[workspace]
resolver = "2"
members = [
    "crates/pastel-proto",
    "crates/pastel-room",
    "crates/pastel-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yashaswi/pastel"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
bytes = "1"
ahash = "0.8"

# server-only
axum = { version = "0.7", features = ["ws", "macros"] }
tokio-tungstenite = "0.21"
dashmap = "6"

# test
proptest = "1"
