[package]
name = "pastel-loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pastel-loadtest"
path = "src/main.rs"

[[bin]]
name = "pastel-bot"
path = "src/bot.rs"

[dependencies]
pastel-proto = { path = "../pastel-proto" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hdrhistogram = { workspace = true }
rand = "0.8"
