[package]
name = "pastel-room"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pastel-proto = { path = "../pastel-proto" }
serde = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
