[package]
name = "pastel-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pastel-server"
path = "src/main.rs"

[dependencies]
pastel-proto = { path = "../pastel-proto" }
pastel-room = { path = "../pastel-room" }
axum = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
bytes = { workspace = true }
