[package]
name = "pastel-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pastel_server"
path = "src/lib.rs"

[[bin]]
name = "pastel-server"
path = "src/main.rs"

[dependencies]
pastel-proto = { path = "../pastel-proto" }
pastel-room = { path = "../pastel-room" }
axum = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
jsonwebtoken = "9"
dotenvy = "0.15"

[dev-dependencies]
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
